# CUDA-pointset-geodesic-shooting

./: CMakeLists.txt  README.md  test_command.sh  test_shootforward.sh
data2/: movie..vtk  q1_gpu.vtk  shavg_landmarks.vtk  shooting_momemta.vtk  shooting_target_native.vtk  shooting_target_procrustes.vtk  target_to_root_procrustes.mat
include/: CommandLineHelper.h  PointSetShootingProblem.h
src/: Float2DVec.cu  PointSetGeodesicShooting_CUDA.cpp  PointSetShootingProblem.cu  ReadWriteVTK.cxx  ShootForward.cpp  check.cxx  dump.cpp  hamiltonian.cu  hamiltonian_kernel.cu  reducer.cu
